<resources>
    <string name="app_name">Golden Pegasusius</string>
    <string name="title_appblocking">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Setting Keys -->
    <string name="appblock">App Block</string>
    <string name="profile">Profile</string>
    <string name="restricted_apps">Restricted Apps</string>
    <string name="time_limit">Time Limit</string>

    <!-- Setting Titles -->
    <string name="profile_header">YOUR PROFILE</string>
    <string name="app_blocking_header">APP BLOCKING MODE</string>
    <string name="general_header">GENERAL</string>

    <!-- Setting Profile Category -->
    <string name="profile_title">Display Name</string>
    <string name="profile_summary">Display Name</string>
    <string name="profile_dialog_title">Enter Your Name</string>

    <!-- Setting Profile Category -->
    <string name="appblock_category_summary">Use your phone too much? Moderate your app usage.</string>
    <string name="appblock_title">App Blocking</string>
    <string name="appblock_summary_on">App blocking enabled</string>
    <string name="appblock_summary_off">App blocking disabled</string>
    <string name="restricted_apps_title">Select Apps to Restrict</string>
    <string name="restricted_apps_dialog">Apps to Restrict</string>
    <string name="smart_blocking_title">Smart Blocking</string>
    <string name="smart_blocking_summary">Smarter detection of procrastination for a bigger push.</string>
    <string name="time_limit_title">Maximum Time Limit</string>
    <string name="block_duration_title">Block Duration</string>


</resources>
