<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_screen"
    app:icon="@mipmap/holy_launcher">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/profile_header">

        <EditTextPreference
            app:dialogTitle="@string/profile_dialog_title"
            app:iconSpaceReserved="false"
            app:key="profile"
            app:title="@string/profile_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:summary="@string/appblock_category_summary"
        app:iconSpaceReserved="false"
        app:title="@string/app_blocking_header">

        <SwitchPreference
            android:defaultValue="true"
            android:selectable="true"
            android:summaryOff="@string/appblock_summary_off"
            android:summaryOn="@string/appblock_summary_on"
            app:iconSpaceReserved="false"
            app:key="@string/appblock"
            app:title="@string/appblock_title" />

        <com.goldenkvack.unstuck.ui.settings.RestrictAppsPreference
            android:defaultValue="@array/empty_array"
            app:iconSpaceReserved="false"
            app:key="restricted_apps"
            app:title="@string/restricted_apps_title" />

        <ListPreference
            android:defaultValue="1800000"
            android:entries="@array/time_limit_entries"
            android:entryValues="@array/time_limit_values"
            android:selectable="true"
            app:dialogTitle="@string/time_limit_title"
            app:iconSpaceReserved="false"
            app:key="time_limit"
            app:title="@string/time_limit_title" />

        <ListPreference
            android:defaultValue="600000"
            android:entries="@array/block_duration_entries"
            android:entryValues="@array/block_duration_values"
            android:selectable="true"
            app:dialogTitle="@string/block_duration_title"
            app:iconSpaceReserved="false"
            app:key="block_duration"
            app:title="@string/block_duration_title" />

        <SwitchPreference
            android:defaultValue="true"
            android:selectable="true"
            app:iconSpaceReserved="false"
            app:key="smart_blocking"
            app:summary="@string/smart_blocking_summary"
            app:title="@string/smart_blocking_title" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
